Fixed bleeding img

--- a/hansChristianSeverinoProject2/styles/sass/_global.scss
+++ b/hansChristianSeverinoProject2/styles/sass/_global.scss
@@ -26,6 +26,12 @@ html{
     margin:0 auto;
 }
 
+img{
+    // width:100%;
+    height:auto;
+    display:block;
+}
+
 body,
 a{
     color:$black;
