--- a/hansChristianSeverinoProject2/styles/sass/_main.scss
+++ b/hansChristianSeverinoProject2/styles/sass/_main.scss
@@ -3,6 +3,10 @@
     font-size:4.2rem;
 }
 
+.blog > img{
+    width:100%;
+}
+
 .photos,
 .about{
     padding:10rem 0;
@@ -17,3 +21,4 @@
 .blogBot a{
     padding:1.3rem 2rem;
 }
+
